# job-flow

./: .env.example  .gitignore  README.md  pyproject.toml
infra/: docker-compose.yml  schma.sql
infra/postgres/: init.sql
service/api/: pyproject.toml
service/crawler/: pyproject.toml
service/orchestrator/: pyproject.toml
