[tool.poetry]
name = "jobflow-api"
version = "0.1.0"
description = "REST API"
authors = ["Wooim <huni032285@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
# 공통 패키지
jobflow-common = {path = "../../packages/jobflow_common", develop = true}
# Django
Django = "^5.2.0"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
django-cors-headers = "^4.6.0"
# OpenAPI/Swagger
drf-spectacular = "^0.28.0"
# 데이터베이스 (psycopg3)
psycopg = {extras = ["binary", "pool"], version = "^3.2.0"}
# 캐싱
redis = "^5.2.0"
hiredis = "^3.0.0"
django-redis = "^5.4.0"
# 검색
elasticsearch = "^8.16.0"
# 비동기 작업
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
django-celery-results = "^2.5.1"
kombu = "^5.4.0"
# 인증
djangorestframework-simplejwt = "^5.4.0"
# 환경 설정
python-dotenv = "^1.0.1"
# 서버
gunicorn = "^23.0.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
# 데이터 처리
pandas = "^2.2.0"
numpy = "^2.2.0"
# 유틸리티
python-dateutil = "^2.9.0"
# CORS & Security
whitenoise = "^6.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-django = "^4.9.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.24.0"
factory-boy = "^3.3.0"
faker = "^33.0.0"
django-debug-toolbar = "^4.4.0"
django-extensions = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.django]
settings_module = "config.settings.development"