[tool.poetry]
name = "jobflow-crawler"
version = "0.1.0"
description = "Web crawler for job postings using Scrapy"
authors = ["Wooim <huni032285@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jobflow-common = {path = "../../packages/jobflow_common", develop = true}
scrapy = "^2.12.0"
scrapy-playwright = "^0.0.42"
playwright = "^1.49.0"
lxml = "^5.3.0"
cssselect = "^1.2.0"
parsel = "^1.9.0"
requests = "^2.32.0"
urllib3 = "^2.2.0"
httpx = "^0.27.0"
pandas = "^2.2.0"
numpy = "^2.2.0"
psycopg = {extras = ["binary"], version = "^3.2.0"}
sqlalchemy = "^2.0.36"
redis = "^5.2.0"
hiredis = "^3.0.0"
python-dotenv = "^1.0.1"
python-dateutil = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
responses = "^0.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"