[tool.poetry]
name = "jobflow-orchestrator"
version = "0.1.0"
description = "Airflow orchestration for JobFlow data pipelines"
authors = ["Wooim <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
jobflow-common = {path = "../../packages/jobflow_common", develop = true}
apache-airflow = "^3.1.5"
apache-airflow-providers-postgres = "*"
apache-airflow-providers-http = "*"
psycopg = {extras = ["binary", "pool"], version = "^3.2.0"}
sqlalchemy = "^2.0.36"
pandas = "^2.2.0"
numpy = "^2.2.0"
requests = "^2.32.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"